# hyperoid-sdl2

./: CMakeLists.txt  Makefile  README.md  hyperoid.c  hyperoid.h  roidsupp.c
doc/: TODO.md
src/: config.h  getargs.c  getargs.h  graphics.h  hyperoid.c  rand.c  roidsupp.c  sdl.c  sdlsound.c
